--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-bottom-tabs": "^5.1.9",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
+    "@types/react-redux": "^7.1.7",
     "expo": "~37.0.3",
     "expo-constants": "^9.0.0",
     "prettier": "^2.0.5",
