--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-fit-image": "^1.5.5",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.9.0",
